crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/receive_function_parameters/interface/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[TypeError 6857] Error: Receive ether function cannot take parameters.
   ╭─[input.sol:6:12]
   │
 6 │     receive(uint256) external payable;
   │            ────┬────  
   │                ╰────── Error occurred here.
───╯

[TypeError 6857] Error: Receive ether function cannot take parameters.
    ╭─[input.sol:11:12]
    │
 11 │     receive(uint256, bool) external payable;
    │            ───────┬───────  
    │                   ╰───────── Error occurred here.
────╯
